# A-maze-ing

./: .gitignore  Makefile  README.md  amazing.py  cube.py  default_config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt
src/: __init__.py  a_maze_ing.py
src/assets/: __init__.py  chars.py  colors.py  digits.py  sprites.py
src/core/: __init__.py  config.py  digits.py  maze.py  mazegen.py
src/display/: __init__.py  ascii_renderer.py  camera.py  constants.py  drawing.py  mlx_2d.py  mlx_3d.py  pathfinding.py  playback.py  raycasting.py  renderer.py
src/input/: __init__.py  chat.py  keyboard.py  mouse.py
src/libs/mlx/: mlx.py
src/utils/: __init__.py  geometry.py
tests/: 3d.py  mlx_cube.py
